# mrubyc-esp32

./: .gitignore  .gitmodules  .mrubycconfig  .ruby-version  LICENSE  Makefile  Makefile.dev  Makefile.usr  README.md  partitions.csv  sdkconfig  sdkconfig.camera  sdkconfig.old
components/mrubyc-3.3.1/: CMakeLists.txt  README.md
components/mrubyc-3.3.1/hal/esp32/: hal.c  hal.h
components/mrubyc-3.3.1/hal/posix/: hal.h
components/mrubyc-3.3.1/src/: _autogen_builtin_symbol.h  _autogen_class_rrt0.h  _autogen_class_string.h  alloc.c  alloc.h  c_array.h  c_math.c  c_numeric.c  c_object.c  c_range.c  c_range.h  c_string.c  c_string.h  console.h  global.c  hal.c  load.c  mrblib.c  opcode.h  rrt0.c  rrt0.h  symbol.h  value.c  value.h  vm.h  vm_config.h
example/: master.rb.adc  master.rb.env2  master.rb.es920  master.rb.gpio-1  master.rb.gpio-2  master.rb.gpio-4  master.rb.httpclient  master.rb.i2c  master.rb.i2c~origin_addsample  master.rb.m5display  master.rb.mcp9808  master.rb.pwm-1  master.rb.pwm-2  master.rb.pwm-3  master.rb.pwm-4  master.rb.pwm-5  master.rb.pwm-6  master.rb.pwm-7  master.rb.rtc  master.rb.s300l  master.rb.sample1  master.rb.sample6  master.rb.scd30  master.rb.sdcard  master.rb.sgp30  master.rb.si7021  master.rb.sleep  master.rb.tmg39931  master.rb.tmp007  master.rb.tof  master.rb.uart  master.rb.veml6070  master.rb.vl53l0x  master.rb.vl53l0x-1  master.rb.vl53l0x-2  master.rb.wifi  master.rb.wifi_simple  (+4 more)
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  font.h  hal.c  hal.h  main.c  mrbc_esp32.h  mrbc_esp32_adc.c  mrbc_esp32_adc.h  mrbc_esp32_ble.c  mrbc_esp32_ble.c.bk  mrbc_esp32_ble.h  mrbc_esp32_bmp280.c  mrbc_esp32_bmp280.h  mrbc_esp32_common.c  mrbc_esp32_dirent.c  mrbc_esp32_dirent.h  mrbc_esp32_gpio.c  mrbc_esp32_gpio.h  mrbc_esp32_http_camera.c  mrbc_esp32_http_camera.h  mrbc_esp32_http_client.c  mrbc_esp32_http_client.h  mrbc_esp32_i2c.c  mrbc_esp32_i2c.h  mrbc_esp32_lcdspi.c  mrbc_esp32_lcdspi.h  mrbc_esp32_lcdspi_font.h  mrbc_esp32_ledc.c  mrbc_esp32_ledc.h  mrbc_esp32_sdspi.c  mrbc_esp32_sdspi.h  mrbc_esp32_sleep.c  mrbc_esp32_sleep.h  mrbc_esp32_sntp.c  mrbc_esp32_sntp.h  mrbc_esp32_spi.c  mrbc_esp32_spi.h  mrbc_esp32_stdio.c  (+13 more)
(+237 files in other folders)
